@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2939085 by mattgill, drunken monkey: Fixed fatal error in Views when trying
+  to set keywords conjunction on aborted query.
 - #2933811 by drunken monkey: Fixed coding standards in new Drush code.
 - #2932347 by drunken monkey, ghaya: Fixed case insensitive matching for
   highlighting non-ASCII text.
